feat : Consumer Group Id Describe